--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "rollup-plugin-commonjs": "^8.3.0",
     "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-node-resolve": "^3.0.3",
+    "rollup-plugin-sizes": "^0.4.2",
     "uglify-js": "^2.8.2"
   },
   "dependencies": {
